another attempt to fix the shift

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1654,13 +1654,13 @@
     margin-top: 100px;
   }
 
-  .portfolio-item {
-    position: relative; /* Ensure elements are properly positioned */
-    z-index: 1; /* Make sure it's clickable */
-  }
+  // .portfolio-item {
+  //   position: relative; /* Ensure elements are properly positioned */
+  //   z-index: 1; /* Make sure it's clickable */
+  // }
   
-  .portfolio-container {
-    position: relative;
-    overflow: hidden; /* Prevent overlapping elements from extending */
-    z-index: 1; /* Lower than portfolio-item */
-  }
+  // .portfolio-container {
+  //   position: relative;
+  //   overflow: hidden; /* Prevent overlapping elements from extending */
+  //   z-index: 1; /* Lower than portfolio-item */
+  // }
